<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/str_downloads" />
    <item
        android:id="@+id/nav_subscription"
        android:icon="@drawable/ic_sub"
        android:title="@string/str_subs" />
    <item
        android:id="@+id/nav_playback_history"
        android:icon="@drawable/ic_history"
        android:title="@string/str_play_back" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_fav"
        android:title="@string/str_fav" />
    <item
        android:id="@+id/nav_add_pod_cast"
        android:icon="@drawable/ic_add"
        android:title="@string/str_add_pod_cast" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/str_invite" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:visible="false"
        android:title="@string/str_logout" />

</menu>