<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_next"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/next_episode"
        android:textColor="@color/colorBlack"
        style="@style/app_text"/>
    <View
        android:id="@+id/v1"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_fav"
        app:layout_constraintTop_toBottomOf="@+id/v1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10dp"
        android:textColor="@color/colorBlack"
        android:text="@string/add_fav"
        style="@style/app_text"/>
    <View
        android:id="@+id/v2"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_share"
        app:layout_constraintTop_toBottomOf="@+id/v2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/share"
        android:textColor="@color/colorBlack"
        style="@style/app_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>