<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_trending"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:text="@string/trending"
                    android:textSize="@dimen/hiad_text_16_sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14dp"
                    android:layout_marginTop="@dimen/_14dp"
                    android:layout_marginEnd="@dimen/_14dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_trending"
                     />

                <TextView
                    android:id="@+id/txt_category"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/category"
                    android:textSize="@dimen/hiad_text_16_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_trending" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14dp"
                    android:layout_marginTop="@dimen/_14dp"
                    android:layout_marginEnd="@dimen/_14dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_category"
                    />


                <TextView
                    android:id="@+id/txt_interest"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/str_interest"
                    android:textSize="@dimen/hiad_text_16_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_category" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14dp"
                    android:layout_marginTop="@dimen/_14dp"
                    android:layout_marginEnd="@dimen/_14dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_interest"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
