<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="3dp"
            android:id="@+id/card_view"
            app:cardBackgroundColor="@color/colorPrimary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    >
    <ImageView
        android:id="@+id/img_back_arrow"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:src="@drawable/ic_back_arrow"
        android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/app_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_back_arrow"
                android:layout_marginLeft="@dimen/_16dp"
                android:textSize="@dimen/hiad_text_18_sp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                />
</RelativeLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/img_pod_cast"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/dummy"
            />
    <Button
        android:layout_width="@dimen/_140dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_subscribe"
        app:layout_constraintTop_toBottomOf="@+id/img_pod_cast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/subscribe"
        android:gravity="center"
        style="@style/app_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_6dp"
        android:background="@drawable/rounded_rectangle_solid"/>
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_subscribe"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_20dp"
        style="@style/app_text_14"
        android:text="@string/details"/>
     <TextView
         android:id="@+id/txt_episode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/txt_description"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="@dimen/_20dp"
         style="@style/app_text"
         android:text="@string/episode"/>
    <View
        android:id="@+id/v1"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:background="@color/colorBlack"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v1"
        android:layout_margin="@dimen/_10dp"
        app:layoutManager="LinearLayoutManager"/>


</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>