<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        layout="@layout/include_episode_details"
        app:layout_constraintTop_toTopOf="parent"
       />
    <ImageView
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/img_pod_cast"
        android:layout_marginTop="@dimen/_20dp"
        android:src="@drawable/dummy"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/_20dp"/>
    <FrameLayout
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_name"
        app:layout_constraintStart_toEndOf="@+id/img_pod_cast"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        style="@style/app_text_14"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_episode"
        app:layout_constraintStart_toEndOf="@+id/img_pod_cast"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        style="@style/app_text_14"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_duration_date"
        app:layout_constraintStart_toEndOf="@+id/img_pod_cast"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        style="@style/app_text_14"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_duration_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_stream"
        android:text="@string/stream"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_stream"
        android:drawablePadding="@dimen/_10dp"
        style="@style/app_text_14"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_download"
        android:text="@string/download"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_50dp"
        app:layout_constraintStart_toEndOf="@+id/txt_stream"
        android:drawableStart="@drawable/ic_download_black"
        android:drawablePadding="@dimen/_10dp"
        style="@style/app_text_14"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/v1"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/const_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:background="@color/colorBlack"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_details"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1"
        style="@style/app_text_14"/>

    <com.huawei.hms.ads.banner.BannerView
        android:id="@+id/hw_banner_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        hwads:adId="@string/banner_ad_id"
        hwads:bannerSize="BANNER_SIZE_360_57"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
